# eventflow-mlops

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
demo/: index.html
docs/: architecture.md  demo.md
sample_outputs/: risk_score_job.json
src/eventflow/: __init__.py  api.py  core.py  sample_pipeline.py
tests/: test_core.py
